@@ -5,6 +5,7 @@
 --- v0.6.? ----------------------------------------------------- ??/??/20?? ---
 
 ADD: center connect dialog on top of main frame/window
+ADD: columns in sessions dialog (upon start) are customizable
 FIX: unchecked confirmTabClose in properties (JSE6 only)
 FIX: bug id:3161636 (System Name not in window title bar anymore)
 FIX: bug id:3160345 (Default value of column separator looks strange)
